change to JDK9 way
Signed-off-by: fixalot <fixalot@eplatz.co.kr>